--- a/view/login.html
+++ b/view/login.html
@@ -1,1 +1,13 @@
-<p>welcome</p>
+<p>LOGIN PAGE</p>
+<!-- <label>user Name</label>
+<input type='text'>
+<label>Password</label>
+<input type='password'>
+<button onclick="save()"> save</button> -->
+
+
+<script>
+    function save() {
+        console.log("hai")
+    }
+</script>
