login page user form changed

--- a/view/login.html
+++ b/view/login.html
@@ -1,9 +1,9 @@
 <p>LOGIN PAGE</p>
-<!-- <label>user Name</label>
+<label>user Name</label>
 <input type='text'>
 <label>Password</label>
 <input type='password'>
-<button onclick="save()"> save</button> -->
+<button onclick="save()"> save</button>
 
 
 <script>
